networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    radix-app: magnus-foredrag
    radix-env: proxy
    radix-component: java
  name: deny-all-outbound-except-dns-from-java-app
  namespace: magnus-foredrag-proxy
spec:
  egress:
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
      to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - to:
        - namespaceSelector:
            matchLabels:
              radix-app: magnus-foredrag
              radix-env: proxy
  podSelector:
    matchLabels:
      radix-component: java
  policyTypes:
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    radix-app: magnus-foredrag
    radix-env: noproxy
    radix-component: java
  name: deny-all-outbound-except-dns-from-java-app
  namespace: magnus-foredrag-noproxy
spec:
  egress:
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
      to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - ports:
      - port: 443
        protocol: TCP
      - port: 443
        protocol: UDP
      to:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
  podSelector:
    matchLabels:
      radix-component: java
  policyTypes:
    - Egress
